# computer-graphics-labs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  camera.cpp  camera.h  cone.mtl  cs7gv5_lab1.cpp  cs7gv5_lab1.frag  cs7gv5_lab1.fs  cs7gv5_lab1.ps  cs7gv5_lab1.vert  cs7gv5_lab1.vs  inverse_kinematics.cpp  lens.cpp  mipmap.cpp  model.cpp  model.h  normalmap.cpp  program.cpp  program.h  shader.cpp  shader.h  transmittance.cpp  transmittance.frag  transmittance.vert  utah-basic.frag  utah-basic.vert  utah-cook-torrance.frag  utah-gooch.frag  utah-normal.frag  utah-phong.frag  utah-phong.vert  utah.cpp  utah.frag  utah.h  utah.vert  utah_main.cpp  (+1 more)
.github/workflows/: cmake.yml
cameras/: camera_fp.h  camera_tp.h  common.h
lib/: program.h  skybox.h  utils.h
lib/cameras/: common.h
lib/kinematics/: bone.h  inverse.h
lib/models/: mesh.h  node.h  scene.h  textures.h
lib/shaders/: feedback_shader.h  shader.h  vertex_picker.h
models/cone/: license.txt  scene.gltf
models/cone/source/: Conus_LP.fbx
models/fancy_teapot/: scene.gltf
models/teapot/: scene.gltf
resources/models/axis/: license  scene.gltf
resources/models/brick_wall/: license  scene.gltf
resources/models/brickwall/: license.txt  scene.gltf
resources/models/checkerboard/: scene.gltf
resources/models/cone/: scene.gltf
resources/models/corridor/: license.txt  scene.gltf
resources/models/crate/: .gitignore  license  scene.gltf
resources/models/high-res-blendshapes/: animation.txt  license
resources/models/lens_showcase/: scene.gltf
resources/models/robotic_arm/: license  scene.glb  scene.gltf
resources/models/samovar/: license  scene.gltf
resources/models/table/: license  scene.gltf
resources/models/teapot/: scene.gltf
shaders/: blinn-phong.frag  cook-torrance.frag  fresnel.frag  fresnel.vert  lens.frag  lens.vert  no-light.frag  phong-delta.vert  phong.vert  skybox.frag  skybox.vert  vertex-pick.vert
shaders/lens/: blur.frag  blur.geom  depth-pick.frag  depth-pick.geom  depth-pick.vert  lens.frag  screen.frag
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
